
7.32  2017-05-28
  - Added -f option to get command.
  - Improved get command with support for piping data to STDIN.
  - Fixed memory leak in Mojo::IOLoop::Client that sometimes prevented the
    connect timeout from working correctly for TLS handshakes.

7.31  2017-04-23
  - Removed deprecated files, slurp and spurt functions from Mojo::Util.
  - Removed deprecated parts attribute from Mojo::Home.
  - Removed deprecated slurp and spurt methods from Mojo::ByteStream.
  - Removed deprecated lib_dir, list_files, parse and rel_dir methods from
    Mojo::Home.
  - Removed deprecated rel_dir method from Mojolicious::Command.
  - Removed deprecated is_status_class method from Mojo::Message::Response.
  - Fixed a bug in the app generator command where the config file name was not
    based on the application moniker.

7.30  2017-04-04
  - Deprecated Mojo::Server::Morbo::watch in favor of
    Mojo::Server::Morbo::Backend::Poll::watch. (marcus)
  - Added support for pluggable Morbo backends. (marcus)
  - Added Mojo::Server::Morbo::Backend and Mojo::Server::Morbo::Backend::Poll
    modules. (marcus)
  - Added backend attribute to Mojo::Server::Morbo. (marcus)
  - Added -b option to Morbo. (marcus)

7.29  2017-03-12
  - Added support for overriding configuration files in applications tested with
    Test::Mojo.
  - Added html_attr_unescape function to Mojo::Util.
  - Fixed unescaping of HTML5 attribute values in Mojo::DOM::HTML.

7.28  2017-03-07
  - Added copy_to, realpath and sibling methods to Mojo::File.
  - Added dir option to list_tree method in Mojo::File.
  - Improved app generator command to generate a config file.
    (tudorconstantin)

7.27  2017-02-27
  - Added support for UNIX domain sockets. (sri, salva)
  - Improved Mojo::UserAgent to complain about unsupported protocols.
  - Fixed a bug in Mojo::URL where invalid host strings could be generated.
  - Fixed blib handling in Mojo::Home.

7.26  2017-02-15