@@ -1,7 +1,8 @@
 
 7.32  2017-05-28
   - Added -f option to get command.
-  - Improved get command with support for piping data to STDIN.
+  - Improved get command with support for passing request data by redirecting
+    STDIN.
   - Fixed memory leak in Mojo::IOLoop::Client that sometimes prevented the
     connect timeout from working correctly for TLS handshakes.
 
